# ctd

./: .gitignore  ARCHITECTURE.md  ASSET_SYSTEM_DESIGN.md  CLAUDE.md  FFI.md  GEOMETRY_RENDERING_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  METAL_IMPLEMENTATION.md  PLATFORM_BACKENDS.md  PLATFORM_IMPLEMENTATION.md  README.md  TEXT_FFI_DESIGN.md  TEXT_PERFORMANCE_OPTIMIZATIONS.md  TEXT_RENDERING_ARCHITECTURE.md  TEXT_RENDERING_IMPLEMENTATION.md  Taskfile.yml  VIDEO_IMPLEMENTATION_PLAN.md  WGPU_MIGRATION.md  WGPU_TEXT_RENDERING_COMPLETE.md  animation.go  builders.go  callback  config.go  controls.go  engine.go  event.go  event_dispatch.go  form.go  go.mod  go.sum  layer.go  layout.go  llms.txt  loop.go  platform.go  platform_darwin.go  platform_ios.go  pool.go  scroll.go  tailwind.go  (+5 more)
cmd/ctd/: main.go
cmd/ctd/commands/: android_build.go  android_create.go  build_macos.go  buildlinux.go  buildwindows.go  config.go  dev.go  engine.go  generate.go  init.go  ios_build.go  ios_create.go  utils.go
engine/: 2025-11-22-caveat-the-messages-below-were-generated-by-the-u.txt  Cargo.toml  build.rs
engine/.cargo/: config.toml
engine/examples/: geometry_rendering.rs  text_rendering.rs
engine/src/: audio.rs  event.rs  ffi.rs  geometry.rs  image.rs  layout.rs  lib.rs  render.rs  style.rs  text.rs  video.rs  widget.rs
engine/src/audio/: android.rs  android_input.rs  input.rs  linux.rs  linux_input.rs  macos.rs  macos_input.rs  player.rs  windows.rs  windows_input.rs
engine/src/platform/: android.rs  backend.rs  ios.rs  macos.rs  mod.rs  web.rs  wgpu_backend.rs  window_styling.rs
engine/src/platform/linux/: clipboard.rs  dialogs.rs  mod.rs  notifications.rs  portal.rs  tray.rs  window_controls.rs
engine/src/platform/shaders/: geometry.wgsl  image.wgsl  text.wgsl
engine/src/platform/windows/: mod.rs  tray.rs  window_controls.rs
engine/src/text/: atlas.rs  font_manager.rs  shaper.rs
engine/src/text/atlas/: android.rs  linux.rs  macos.rs  windows.rs
engine/src/text/font_manager/: linux.rs  macos.rs  windows.rs
engine/src/text/shaper/: linux.rs  macos.rs  windows.rs
engine/src/video/: android.rs  android_input.rs  decoder.rs  input.rs  linux.rs  linux_input.rs  macos.rs  macos_input.rs  player.rs  windows.rs  windows_input.rs
examples/android_demo/: build.gradle.kts  gradle.properties  gradlew  main.go  settings.gradle.kts
examples/android_demo/app/: build.gradle.kts
examples/android_demo/app/src/main/: AndroidManifest.xml
examples/android_demo/app/src/main/java/com/centered/demo/: CenteredActivity.kt
examples/android_demo/app/src/main/res/drawable/: ic_launcher_foreground.xml
examples/android_demo/app/src/main/res/values/: strings.xml  themes.xml
examples/android_demo/gradle/: libs.versions.toml
examples/audio/: example.m4a  main.go
examples/basic/: main.go
examples/callback/: main.go
examples/clipboard/: main.go
examples/controls/: main.go
examples/darkmode/: main.go
examples/demo/: main.go
examples/flexbox/: main.go
examples/fontbundle/: main.go
examples/forms/: main.go
examples/frameless/: main.go
examples/images/: main.go
examples/interactive/: main.go
examples/ios_demo/: main.go
examples/ios_demo/CenteredDemo.xcframework/ios-arm64_x86_64-simulator/CenteredDemo.framework/: Info.plist
examples/ios_demo/CenteredDemo.xcframework/ios-arm64_x86_64-simulator/CenteredDemo.framework/Headers/: Ios_demo.objc.h
examples/ios_demo/CenteredDemo.xcframework/ios-arm64_x86_64-simulator/CenteredDemo.framework/Modules/: module.modulemap
examples/ios_demo/XcodeProject/: project.yml
examples/ios_demo/XcodeProject/CenteredDemo/: AppDelegate.swift  Info.plist  main.m
examples/ios_demo/XcodeProject/CenteredDemo.xcodeproj/: project.pbxproj
examples/ios_demo/XcodeProject/CenteredDemoApp.xcodeproj/: project.pbxproj
examples/ios_demo/XcodeProject/examples/ios_demo/CenteredDemo.xcframework/: Info.plist
examples/ios_demo/XcodeProject/examples/ios_demo/CenteredDemo.xcframework/ios-arm64/CenteredDemo.framework/Headers/: CenteredDemo.h
examples/ios_demo/XcodeProject/examples/ios_demo/CenteredDemo.xcframework/ios-arm64_x86_64-simulator/CenteredDemo.framework/: Info.plist
examples/ios_demo/XcodeProject/examples/ios_demo/CenteredDemo.xcframework/ios-arm64_x86_64-simulator/CenteredDemo.framework/Headers/: Ios_demo.objc.h
examples/ios_demo/XcodeProject/examples/ios_demo/XcodeProject/CenteredDemo/: Info.plist
examples/layout/: main.go
examples/media_input/: main.go
examples/responsive/: main.go
examples/retained/: main.go
examples/tailwind/: main.go
examples/textinput/: main.go
examples/unified/: main.go
examples/unified/app/: app.go  mobile.go
examples/video/: main.go
examples/web_demo/: index.html  main.go
internal/ffi/: ffi.go  ffi_cgo_backup.go.bak  ffi_js.go  ffi_unix.go  ffi_windows.go  transport.go  transport_purego.go
retained/: animation.go  builders.go  controls.go  event.go  event_dispatch.go  form.go  layer.go  layout.go  loop.go  pool.go  scroll.go  tailwind.go  text_input.go  tree.go  widget.go
tools/generate/: main.go
tw/: advanced_test.go  arbitrary_test.go  breakpoints.go  generated.go  parser.go  parser_test.go  types.go
