[package]
name = "centered-engine"
version = "0.1.0"
edition = "2021"

[lib]
name = "centered_engine"
crate-type = ["lib", "cdylib", "staticlib"]

# iOS app binary - thin wrapper that calls into Go
[[bin]]
name = "centered-ios"
path = "src/bin/ios_app.rs"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Geometry and layout
euclid = "0.22"

# Collections
slotmap = { version = "1.0", features = ["serde"] }

# FFI
libc = "0.2"
lazy_static = "1.4"

# Cross-platform rendering with wgpu
wgpu = "22.1"
pollster = "0.3"  # For blocking on async operations
bytemuck = { version = "1.14", features = ["derive"] }
raw-window-handle = "0.6"  # For cross-platform window handle access

# Image loading (PNG, JPEG, etc.)
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

# Windowing (for desktop platforms - iOS uses native UIKit, Android uses native activity)
winit = "0.30"

# macOS/iOS - Core Graphics and Core Text for font rasterization
[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
cocoa = "0.25"
core-graphics = "0.23"
core-foundation = "0.9"
core-text = "20.1"
objc = "0.2"
block = "0.1"  # For Objective-C blocks (permission requests)

# objc2 crates for direct platform APIs (replacing winit)
objc2 = "0.5"
objc2-foundation = { version = "0.2", features = ["NSObject", "NSString", "NSSet", "NSThread"] }

# macOS-specific objc2 bindings
[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = { version = "0.2", features = [
    "NSApplication",
    "NSEvent",
    "NSResponder",
    "NSView",
    "NSWindow",
    "NSScreen",
    "NSRunningApplication",
    "NSGraphics",
] }

# iOS-specific objc2 bindings
[target.'cfg(target_os = "ios")'.dependencies]
block2 = "0.5"
objc2-ui-kit = { version = "0.2", features = [
    "UIApplication",
    "UIDevice",
    "UIEvent",
    "UIGestureRecognizer",
    "UIInterface",
    "UIOrientation",
    "UIResponder",
    "UIScreen",
    "UITouch",
    "UITraitCollection",
    "UIView",
    "UIViewController",
    "UIWindow",
] }

# Android-specific dependencies
[target.'cfg(target_os = "android")'.dependencies]
android-activity = { version = "0.6", features = ["native-activity"] }
ndk = "0.9"
jni = "0.21"
log = "0.4"
android_logger = "0.14"
unicode-segmentation = "1.10"  # For proper grapheme cluster handling (emoji sequences)

# Linux-specific dependencies
[target.'cfg(target_os = "linux")'.dependencies]
# Text rendering
freetype-rs = "0.37"          # FreeType bindings for glyph rasterization
fontconfig = "0.10"           # fontconfig bindings for system font discovery
# Desktop integration
arboard = "3"                 # Clipboard (X11 + Wayland)
rfd = "0.15"                  # Native file dialogs
tray-icon = { version = "0.19", default-features = false }  # System tray icons (no libxdo)
gtk = "0.18"                  # GTK for tray icon menus (required by muda/tray-icon)
notify-rust = "4"             # Desktop notifications
zbus = { version = "4", default-features = false, features = ["tokio"] }  # D-Bus for XDG portals
tokio = { version = "1", features = ["rt-multi-thread"] }  # Async runtime for zbus
futures-util = "0.3"          # StreamExt for D-Bus signal listening
# Audio playback and capture
rodio = { version = "0.19", default-features = false, features = ["symphonia-all"] }  # Audio playback
cpal = "0.15"                 # Audio input/output
ureq = "2"                    # HTTP client for URL loading
# Video playback (GStreamer)
gstreamer = "0.23"            # GStreamer bindings
gstreamer-video = "0.23"      # Video support
gstreamer-app = "0.23"        # App source/sink
# Camera capture
v4l = "0.14"                  # Video4Linux2 bindings

# Windows-specific dependencies
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    # Core
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_System_Threading",
    "Win32_System_Variant",
    "Win32_System_Memory",
    "Win32_System_DataExchange",

    # Text rendering (DirectWrite)
    "Win32_Graphics_DirectWrite",
    "Win32_Graphics_Direct2D",
    "Win32_Graphics_Direct2D_Common",
    "Win32_Graphics_Imaging",
    "Win32_Graphics_Dxgi_Common",

    # Audio (WASAPI)
    "Win32_Media_Audio",
    "Win32_Media_Audio_Endpoints",
    "Win32_System_Com_StructuredStorage",
    "Win32_Devices_Properties",
    "Win32_UI_Shell_PropertiesSystem",

    # Video (Media Foundation)
    "Win32_Media_MediaFoundation",

    # System tray
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",

    # Window styling (DWM)
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Gdi",
    "Win32_UI_Controls",

    # Dark mode detection
    "Win32_System_Registry",

    # Networking (for URL downloads)
    "Win32_Networking_WinHttp",
]}

# Web/WASM dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "CssStyleDeclaration",
    "DomRect",
    "Event",
    "EventTarget",
    "KeyboardEvent",
    "MouseEvent",
    "TouchEvent",
    "TouchList",
    "Touch",
    "WheelEvent",
    "FocusEvent",
    "Performance",
    "console",
] }
console_error_panic_hook = "0.1"

[features]
default = []

[dev-dependencies]
criterion = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

